# read_ecl

./: CMakeLists.txt  README.md  main.cpp
Examples/: 2D.INIT  2D.INSPEC  2D.RSSPEC  2D.S0001  2D.SMSPEC  2D.X0000  CMakeLists.txt  DIMENS.mtx  DX.mtx  IWEL.mtx  LOGIHEAD.mtx  NAMES.mtx  PARAMS.mtx  SPE9.EGRID  SWAT.mtx  TYPE.mtx
Tests/: CMakeLists.txt  main.cpp  main.py
src/: read_ecl.cpp  read_ecl.h  read_ecl.py.cpp  read_ecl_C.cpp  read_ecl_C.h
